tests/ui/typech/visibility_construct_field_outside_priv.lm
struct Foo {
    a: Int32;
}

fn main() {
    let a = Foo { a: 0 };
}
